add customers list route
