# cmd/api/main.go
@@ -60,6 +60,7 @@ func main() {
 	router.GET("/api/healthcheck", factory.HealthCheckController.Check)
 	router.POST("/api/v1/customers", factory.CustomerController.Create)
 	router.GET("/api/v1/customers/:id", factory.CustomerController.Find)
+	router.GET("/api/v1/customers", factory.CustomerController.List)
 	router.PUT("/api/v1/customers/:id", factory.CustomerController.Update)
 	router.DELETE("/api/v1/customers/:id", factory.CustomerController.Delete)
 
