# internal/controller/presenter/customer_presenter.go
@@ -8,3 +8,8 @@ type CustomerRes struct {
 	ID   int64  `json:"id" example:"1"`
 	Name string `json:"name" example:"Fulano Oliveira"`
 }
+
+type CustomersListRes struct {
+	Data     []CustomerRes `json:"data"`
+	Metadata MetadataPage  `json:"metadata"`
+}
